[gd_scene load_steps=21 format=3 uid="uid://b0moimlokcbdu"]

[ext_resource type="Script" path="res://scenes/levels/2/level.gd" id="1_o4ktt"]
[ext_resource type="Texture2D" uid="uid://delgrq1ol4xbg" path="res://assets/background.png" id="2_qoid0"]
[ext_resource type="PackedScene" uid="uid://61y8ylbbieqc" path="res://agents/player/player.tscn" id="3_0mlqw"]
[ext_resource type="PackedScene" uid="uid://b5vgmyclbwdx2" path="res://scripts/window_reference.tscn" id="4_061wx"]
[ext_resource type="PackedScene" uid="uid://ccad6vg5nvgnd" path="res://agents/player/tools/lasergun/lasergun.tscn" id="4_w1axn"]
[ext_resource type="PackedScene" uid="uid://624k2gso6a2c" path="res://agents/heart/heart.tscn" id="5_4cy4t"]
[ext_resource type="PackedScene" uid="uid://djk1y81lii0kr" path="res://agents/level_border/level_border.tscn" id="7_5ta0u"]
[ext_resource type="PackedScene" uid="uid://cdem2eb4ljqgl" path="res://agents/goob/goob.tscn" id="7_hyyjo"]
[ext_resource type="BehaviorTree" uid="uid://cba236eflbibp" path="res://scenes/levels/2/goob.tres" id="8_8htoy"]
[ext_resource type="Script" path="res://scripts/health.gd" id="8_wtjn8"]
[ext_resource type="Texture2D" uid="uid://ceul6i2ukwj47" path="res://assets/gravestone.png" id="9_eukoa"]
[ext_resource type="PackedScene" uid="uid://bdm1aa8smx8d" path="res://agents/healthbar/healthbar.tscn" id="10_8xe3k"]
[ext_resource type="Texture2D" uid="uid://bfme05xkojs7s" path="res://assets/healthbar-enemy-empty.png" id="14_coaw6"]
[ext_resource type="Texture2D" uid="uid://bigx17t4fvgwx" path="res://assets/healthbar-enemy-full.png" id="15_flnkx"]
[ext_resource type="PackedScene" uid="uid://0vc2jgwui72r" path="res://scenes/menus/pause.tscn" id="26_6jmhc"]
[ext_resource type="Texture2D" uid="uid://bwwy5e651n0ao" path="res://assets/healthbar-patient-empty.png" id="26_f0jdh"]
[ext_resource type="Texture2D" uid="uid://b15cna2xw7egp" path="res://assets/healthbar-patient-full.png" id="27_srg5l"]
[ext_resource type="Texture2D" uid="uid://d3adqfsupjwfi" path="res://assets/healthbar-capsule-empty.png" id="28_hd187"]
[ext_resource type="Texture2D" uid="uid://dwejtqoulkuou" path="res://assets/healthbar-capsule-full.png" id="29_1phmu"]
[ext_resource type="AudioStream" uid="uid://nn4ix7ei4i57" path="res://sound/game-loop.wav" id="31_g34w7"]

[node name="Level" type="Node"]
script = ExtResource("1_o4ktt")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.427493, 0.427493, 0.427493, 0.737255)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("2_qoid0")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("3_0mlqw")]
position = Vector2(96, 89)
rotation = -5.02492
ship_tool = ExtResource("4_w1axn")

[node name="WindowReference" parent="." instance=ExtResource("4_061wx")]
metadata/_edit_lock_ = true

[node name="Node" type="Node" parent="."]

[node name="Heart" parent="Node" instance=ExtResource("5_4cy4t")]
position = Vector2(364, 117)
has_pacemaker = false

[node name="Goob" parent="Node" instance=ExtResource("7_hyyjo")]
position = Vector2(364, 117)
behavior = ExtResource("8_8htoy")

[node name="LevelBorder" parent="." instance=ExtResource("7_5ta0u")]

[node name="PatientHealth" type="Node" parent="." groups=["patient_health"]]
script = ExtResource("8_wtjn8")
max_health = 30.0

[node name="Gravestone" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Gravestone"]
position = Vector2(216, 160)
scale = Vector2(2, 2)
texture = ExtResource("9_eukoa")

[node name="HealthbarPatient" parent="." instance=ExtResource("10_8xe3k")]
position = Vector2(318, 4)
bar_empty = ExtResource("26_f0jdh")
bar_full = ExtResource("27_srg5l")

[node name="HealthbarGoob" parent="." instance=ExtResource("10_8xe3k")]
position = Vector2(167, 4)
bar_empty = ExtResource("14_coaw6")
bar_full = ExtResource("15_flnkx")

[node name="HealthbarPlayer" parent="." instance=ExtResource("10_8xe3k")]
position = Vector2(36, 2)
bar_empty = ExtResource("28_hd187")
bar_full = ExtResource("29_1phmu")

[node name="Pause" parent="." instance=ExtResource("26_6jmhc")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_g34w7")
volume_db = -5.0
autoplay = true

[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="death" from="Node/Goob" to="." method="_on_goob_death"]
[connection signal="death" from="PatientHealth" to="." method="_on_patient_death"]
